# MIraaj.tech-AI-ystem-V1

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/ai-service/: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.lock.txt  requirements.txt
apps/ai-service/app/: __init__.py  main.py
apps/ai-service/app/api/: health.py  internal_campaigns.py  internal_creative.py  internal_distribution.py  internal_intelligence.py  internal_media.py
apps/ai-service/app/core/: __init__.py  config.py  (+3 more)
apps/ai-service/scripts/: provider_smoke.py
apps/ai-service/tests/: asgi_test_client.py  conftest.py  media_helpers.py  test_campaign_disabled_provider.py  test_campaign_gemini_provider.py  test_campaign_safety.py  test_campaign_schemas.py  test_campaign_transcreation.py  test_creative_providers.py  test_creative_render.py  test_creative_routes.py  test_distribution.py  test_distribution_final_acceptance.py  test_distribution_routes.py  test_health.py  test_intelligence_disabled_provider.py  test_intelligence_gemini_provider.py  test_internal_campaigns.py  test_internal_intelligence.py  test_internal_media.py  test_language_and_confidence.py  test_media_processing.py  test_observability.py  test_ocr_language_selector.py  test_openai_image_provider.py  test_prompt_injection.py  test_provider_secret_redaction.py  test_runway_video_provider.py  test_security.py  test_translation_disabled_provider.py  test_translation_gemini_provider.py  test_vision_and_normalize.py
(+734 files in other folders)
